frontend/cc/y.output
State 24 conflicts: 1 shift/reduce
State 52 conflicts: 13 shift/reduce
State 87 conflicts: 1 shift/reduce
State 175 conflicts: 1 shift/reduce
State 236 conflicts: 1 shift/reduce
State 242 conflicts: 1 shift/reduce


Grammar

    0 $accept: Start $end

    1 Start: Program
    2      | Program G_ERROR

    3 Program: %empty
    4        | Program Define
    5        | Program CppFileLine
    6        | Program ClasseEmpty
    7        | Program Ignore
    8        | Program Warning
    9        | Program FileHeader
   10        | Program AssertHeader
   11        | Program Doc
   12        | Program Classe
   13        | Program Enum
   14        | Program Function
   15        | Program Global
   16        | Program Typedef
   17        | Program Struct
   18        | Program Union
   19        | Program G_EOL
   20        | Program G_END

   21 Global: Doc PrefixedGlobalBlock
   22       | PrefixedGlobalBlock

   23 PrefixedGlobalBlock: EXPOR_TAG VarsCore
   24                    | STATIC_TAG VarsCore
   25                    | PUBLIK_TAG VarsCore
   26                    | VarsCore

   27 Function: Doc PrefixedFunctionBlock
   28         | PrefixedFunctionBlock

   29 PrefixedFunctionBlock: PUBLIK_TAG MethodCore
   30                      | MethodCore
   31                      | STATIC_TAG MethodCore

   32 Classe: Doc ClasseBlock
   33       | ClasseBlock

   34 ClasseEmpty: CLASS_TAG G_WORD G_END

   35 ClasseBlock: ClsHeader ClsExtends ClsCore G_END
   36            | ClsHeader ClsCore G_END

   37 ClsHeader: CLASS_TAG G_WORD

   38 ClsExtends: SUPER_TAG ClsSuper
   39           | ClsExtends G_SEPARATOR ClsSuper

   40 ClsSuper: ClsHeader
   41         | ClsHeader OPEN_PRM Params CLOSE_PRM

   42 ClsHeader: PUBLIK_TAG G_WORD
   43          | G_WORD

   44 ClsCore: OPEN_BRACE Section
   45        | OPEN_BRACE SECTION_TAG Section
   46        | ClsCore SECTION_TAG Section
   47        | ClsCore CLOSE_BRACE

   48 Section: SectionElement
   49        | Section SectionElement

   50 SectionElement: Method
   51               | Var
   52               | Enum
   53               | G_END
   54               | Typedef
   55               | Ignore
   56               | CppFileLine
   57               | Warning

   58 Var: Doc VarBlock
   59    | VarBlock

   60 VarBlock: PUBLIK_TAG VarsCore
   61         | STATIC_TAG VarsCore
   62         | VarsCore

   63 VarsCore: VarType VarsList G_END
   64         | VarType VarsList END_CODE

   65 VarsList: VarInstance
   66         | VarsList G_SEPARATOR VarInstance

   67 VarInstance: VarDeclaration
   68            | VarDeclaration G_EQUAL
   69            | VarDeclaration Array

   70 VarDeclaration: G_WORD
   71               | ComplexType G_WORD

   72 Method: Doc MethodBlock
   73       | MethodBlock

   74 MethodBlock: MethodCore
   75            | VIRTUAL_TAG MethodCore
   76            | STATIC_TAG MethodCore

   77 MethodCore: MethodProto END_CODE
   78           | MethodProto G_END

   79 MethodProto: MethodHeader Params CLOSE_PRM
   80            | MethodHeader CLOSE_PRM

   81 MethodHeader: VarType MethodName
   82             | MethodName

   83 MethodName: G_WORD OPEN_PRM
   84           | ComplexType G_WORD OPEN_PRM

   85 Typedef: Doc TypedefBlock G_END
   86        | TypedefBlock G_END

   87 TypedefBlock: TYPEDEF_TAG COMPLEX_TYPE G_WORD G_WORD
   88             | TYPEDEF_TAG COMPLEX_TYPE G_WORD GPtrs G_WORD
   89             | TYPEDEF_TAG G_WORD G_WORD
   90             | TYPEDEF_TAG G_WORD GPtrs G_WORD
   91             | TYPEDEF_TAG EnumBlock G_WORD
   92             | TYPEDEF_TAG EnumHeader G_WORD
   93             | TYPEDEF_TAG UnionBlock G_WORD
   94             | TYPEDEF_TAG StructBlock G_WORD
   95             | TYPEDEF_TAG STRUCT_TAG G_WORD G_WORD
   96             | TYPEDEF_TAG STRUCT_TAG G_WORD GPtrs G_WORD
   97             | TYPEDEF_TAG G_WORD OPEN_PRM

   98 Struct: Doc StructBlock G_END
   99       | StructBlock G_END

  100 StructBlock: StructCore CLOSE_BRACE

  101 StructCore: STRUCT_TAG OPEN_BRACE
  102           | STRUCT_TAG G_WORD OPEN_BRACE
  103           | StructCore Element

  104 Union: Doc UnionBlock G_END
  105      | UnionBlock G_END

  106 UnionBlock: UnionCore CLOSE_BRACE

  107 UnionCore: UNION_TAG OPEN_BRACE
  108          | UNION_TAG G_WORD OPEN_BRACE
  109          | UnionCore Element

  110 Element: Doc ElementBlock
  111        | ElementBlock

  112 ElementBlock: VarType ElementInstances G_END

  113 ElementInstances: ElementInstance
  114                 | ElementInstances G_SEPARATOR ElementInstance

  115 ElementInstance: G_WORD
  116                | G_WORD Array
  117                | ComplexType G_WORD
  118                | ComplexType G_WORD Array

  119 Define: DefineBlock
  120       | Doc DefineBlock

  121 DefineBlock: DEFINE_TAG G_WORD G_EOL
  122            | DEFINE_TAG G_WORD G_SEPARATOR
  123            | DEFINE_TAG G_WORD TYPEDEF_TAG
  124            | DEFINE_TAG G_WORD G_WORD
  125            | DEFINE_TAG G_WORD COMPLEX_TYPE
  126            | DEFINE_TAG G_WORD OPEN_PRM

  127 Enum: Doc EnumBlock G_END
  128     | EnumBlock G_END

  129 EnumBlock: EnumHeader OPEN_BRACE Values CLOSE_BRACE

  130 EnumHeader: ENUM_TAG
  131           | ENUM_TAG G_WORD

  132 Values: Value
  133       | Values G_SEPARATOR Value
  134       | Values G_SEPARATOR

  135 Value: Doc ValueBlock
  136      | ValueBlock

  137 ValueBlock: G_WORD
  138           | G_WORD G_EQUAL GWords
  139           | G_WORD G_EQUAL OPEN_PRM GWords CLOSE_PRM

  140 Doc: DOC_BLOCK

  141 Params: Param
  142       | Params G_SEPARATOR Param

  143 VarType: G_WORD
  144        | COMPLEX_TYPE G_WORD
  145        | CONST_TYPE G_WORD
  146        | ENUM_TAG G_WORD
  147        | STRUCT_TAG G_WORD
  148        | UNION_TAG G_WORD
  149        | TypedefBlock
  150        | StructBlock
  151        | EnumBlock
  152        | UnionBlock

  153 Param: VarType
  154      | VarType G_WORD
  155      | VarType ComplexType
  156      | VarType ComplexType G_WORD
  157      | VarType ComplexType G_WORD OPEN_BRAKET CLOSE_BRAKET
  158      | VarType OPEN_PRM GPtrs G_WORD CLOSE_PRM OPEN_PRM

  159 AssertHeader: IMPLEMENT_TAG OPEN_PRM G_WORD CLOSE_PRM
  160             | IMPLEMENT_TAG G_LINE

  161 FileHeader: FILE_TAG G_LINE

  162 CppFileLine: LINE_TAG G_WORD

  163 Warning: WARNING_TAG G_LINE

  164 Ignore: IgnoreBlock
  165       | VarType IgnoreBlock

  166 IgnoreBlock: IGNORE_TAG

  167 Array: OPEN_BRAKET Number CLOSE_BRAKET
  168      | OPEN_BRAKET CLOSE_BRAKET

  169 GPtrs: G_PTR
  170      | GPtrs G_PTR

  171 ComplexType: GPtrs
  172            | COMPLEX_TYPE
  173            | GPtrs COMPLEX_TYPE

  174 GWords: G_WORD
  175       | GWords G_WORD

  176 Number: G_NUM
  177       | Number G_OPERATOR G_NUM


Terminals, with rules where they appear

$end (0) 0
error (256)
G_WORD (258) 34 37 42 43 70 71 83 84 87 88 89 90 91 92 93 94 95 96
    97 102 108 115 116 117 118 121 122 123 124 125 126 131 137 138
    139 143 144 145 146 147 148 154 156 157 158 159 162 174 175
G_ERROR (259) 2
G_EOL (260) 19 121
G_SEPARATOR (261) 39 66 114 122 133 134 142
G_END (262) 20 34 35 36 53 63 78 85 86 98 99 104 105 112 127 128
G_EQUAL (263) 68 138 139
G_LINE (264) 160 161 163
G_NUM (265) 176 177
G_OPERATOR (266) 177
FILE_TAG (267) 161
CLASS_TAG (268) 34 37
VIRTUAL_TAG (269) 75
SUPER_TAG (270) 38
PUBLIK_TAG (271) 25 29 42 60
CLOSE_PRM (272) 41 79 80 139 158 159
OPEN_PRM (273) 41 83 84 97 126 139 158 159
STATIC_TAG (274) 24 31 61 76
EXPOR_TAG (275) 23
IMPLEMENT_TAG (276) 159 160
ENUM_TAG (277) 130 131 146
DOC_BLOCK (278) 140
SECTION_TAG (279) 45 46
DEFINE_TAG (280) 121 122 123 124 125 126
LINE_TAG (281) 162
END_CODE (282) 64 77
OPEN_BRACE (283) 44 45 101 102 107 108 129
CLOSE_BRACE (284) 47 100 106 129
IGNORE_TAG (285) 166
WARNING_TAG (286) 163
TYPEDEF_TAG (287) 87 88 89 90 91 92 93 94 95 96 97 123
STRUCT_TAG (288) 95 96 101 102 147
UNION_TAG (289) 107 108 148
G_PTR (290) 169 170
COMPLEX_TYPE (291) 87 88 125 144 172 173
CONST_TYPE (292) 145
OPEN_BRAKET (293) 157 167 168
CLOSE_BRAKET (294) 157 167 168


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
Start (41)
    on left: 1 2, on right: 0
Program (42)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20, on right:
    1 2 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20
Global (43)
    on left: 21 22, on right: 15
PrefixedGlobalBlock (44)
    on left: 23 24 25 26, on right: 21 22
Function (45)
    on left: 27 28, on right: 14
PrefixedFunctionBlock (46)
    on left: 29 30 31, on right: 27 28
Classe (47)
    on left: 32 33, on right: 12
ClasseEmpty (48)
    on left: 34, on right: 6
ClasseBlock (49)
    on left: 35 36, on right: 32 33
ClsHeader (50)
    on left: 37 42 43, on right: 35 36 40 41
ClsExtends (51)
    on left: 38 39, on right: 35 39
ClsSuper (52)
    on left: 40 41, on right: 38 39
ClsCore (53)
    on left: 44 45 46 47, on right: 35 36 46 47
Section (54)
    on left: 48 49, on right: 44 45 46 49
SectionElement (55)
    on left: 50 51 52 53 54 55 56 57, on right: 48 49
Var (56)
    on left: 58 59, on right: 51
VarBlock (57)
    on left: 60 61 62, on right: 58 59
VarsCore (58)
    on left: 63 64, on right: 23 24 25 26 60 61 62
VarsList (59)
    on left: 65 66, on right: 63 64 66
VarInstance (60)
    on left: 67 68 69, on right: 65 66
VarDeclaration (61)
    on left: 70 71, on right: 67 68 69
Method (62)
    on left: 72 73, on right: 50
MethodBlock (63)
    on left: 74 75 76, on right: 72 73
MethodCore (64)
    on left: 77 78, on right: 29 30 31 74 75 76
MethodProto (65)
    on left: 79 80, on right: 77 78
MethodHeader (66)
    on left: 81 82, on right: 79 80
MethodName (67)
    on left: 83 84, on right: 81 82
Typedef (68)
    on left: 85 86, on right: 16 54
TypedefBlock (69)
    on left: 87 88 89 90 91 92 93 94 95 96 97, on right: 85 86 149
Struct (70)
    on left: 98 99, on right: 17
StructBlock (71)
    on left: 100, on right: 94 98 99 150
StructCore (72)
    on left: 101 102 103, on right: 100 103
Union (73)
    on left: 104 105, on right: 18
UnionBlock (74)
    on left: 106, on right: 93 104 105 152
UnionCore (75)
    on left: 107 108 109, on right: 106 109
Element (76)
    on left: 110 111, on right: 103 109
ElementBlock (77)
    on left: 112, on right: 110 111
ElementInstances (78)
    on left: 113 114, on right: 112 114
ElementInstance (79)
    on left: 115 116 117 118, on right: 113 114
Define (80)
    on left: 119 120, on right: 4
DefineBlock (81)
    on left: 121 122 123 124 125 126, on right: 119 120
Enum (82)
    on left: 127 128, on right: 13 52
EnumBlock (83)
    on left: 129, on right: 91 127 128 151
EnumHeader (84)
    on left: 130 131, on right: 92 129
Values (85)
    on left: 132 133 134, on right: 129 133 134
Value (86)
    on left: 135 136, on right: 132 133
ValueBlock (87)
    on left: 137 138 139, on right: 135 136
Doc (88)
    on left: 140, on right: 11 21 27 32 58 72 85 98 104 110 120 127
    135
Params (89)
    on left: 141 142, on right: 41 79 142
VarType (90)
    on left: 143 144 145 146 147 148 149 150 151 152, on right: 63
    64 81 112 153 154 155 156 157 158 165
Param (91)
    on left: 153 154 155 156 157 158, on right: 141 142
AssertHeader (92)
    on left: 159 160, on right: 10
FileHeader (93)
    on left: 161, on right: 9
CppFileLine (94)
    on left: 162, on right: 5 56
Warning (95)
    on left: 163, on right: 8 57
Ignore (96)
    on left: 164 165, on right: 7 55
IgnoreBlock (97)
    on left: 166, on right: 164 165
Array (98)
    on left: 167 168, on right: 69 116 118
GPtrs (99)
    on left: 169 170, on right: 88 90 96 158 170 171 173
ComplexType (100)
    on left: 171 172 173, on right: 71 84 117 118 155 156 157
GWords (101)
    on left: 174 175, on right: 138 139 175
Number (102)
    on left: 176 177, on right: 167 177


State 0

    0 $accept: . Start $end

    $default  reduce using rule 3 (Program)

    Start    go to state 1
    Program  go to state 2


State 1

    0 $accept: Start . $end

    $end  shift, and go to state 3


State 2

    1 Start: Program .
    2      | Program . G_ERROR
    4 Program: Program . Define
    5        | Program . CppFileLine
    6        | Program . ClasseEmpty
    7        | Program . Ignore
    8        | Program . Warning
    9        | Program . FileHeader
   10        | Program . AssertHeader
   11        | Program . Doc
   12        | Program . Classe
   13        | Program . Enum
   14        | Program . Function
   15        | Program . Global
   16        | Program . Typedef
   17        | Program . Struct
   18        | Program . Union
   19        | Program . G_EOL
   20        | Program . G_END

    G_WORD         shift, and go to state 4
    G_ERROR        shift, and go to state 5
    G_EOL          shift, and go to state 6
    G_END          shift, and go to state 7
    FILE_TAG       shift, and go to state 8
    CLASS_TAG      shift, and go to state 9
    PUBLIK_TAG     shift, and go to state 10
    STATIC_TAG     shift, and go to state 11
    EXPOR_TAG      shift, and go to state 12
    IMPLEMENT_TAG  shift, and go to state 13
    ENUM_TAG       shift, and go to state 14
    DOC_BLOCK      shift, and go to state 15
    DEFINE_TAG     shift, and go to state 16
    LINE_TAG       shift, and go to state 17
    IGNORE_TAG     shift, and go to state 18
    WARNING_TAG    shift, and go to state 19
    TYPEDEF_TAG    shift, and go to state 20
    STRUCT_TAG     shift, and go to state 21
    UNION_TAG      shift, and go to state 22
    G_PTR          shift, and go to state 23
    COMPLEX_TYPE   shift, and go to state 24
    CONST_TYPE     shift, and go to state 25

    $default  reduce using rule 1 (Start)

    Global                 go to state 26
    PrefixedGlobalBlock    go to state 27
    Function               go to state 28
    PrefixedFunctionBlock  go to state 29
    Classe                 go to state 30
    ClasseEmpty            go to state 31
    ClasseBlock            go to state 32
    ClsHeader              go to state 33
    VarsCore               go to state 34
    MethodCore             go to state 35
    MethodProto            go to state 36
    MethodHeader           go to state 37
    MethodName             go to state 38
    Typedef                go to state 39
    TypedefBlock           go to state 40
    Struct                 go to state 41
    StructBlock            go to state 42
    StructCore             go to state 43
    Union                  go to state 44
    UnionBlock             go to state 45
    UnionCore              go to state 46
    Define                 go to state 47
    DefineBlock            go to state 48
    Enum                   go to state 49
    EnumBlock              go to state 50
    EnumHeader             go to state 51
    Doc                    go to state 52
    VarType                go to state 53
    AssertHeader           go to state 54
    FileHeader             go to state 55
    CppFileLine            go to state 56
    Warning                go to state 57
    Ignore                 go to state 58
    IgnoreBlock            go to state 59
    GPtrs                  go to state 60
    ComplexType            go to state 61


State 3

    0 $accept: Start $end .

    $default  accept


State 4

   43 ClsHeader: G_WORD .
   83 MethodName: G_WORD . OPEN_PRM
  143 VarType: G_WORD .

    OPEN_PRM  shift, and go to state 62

    SUPER_TAG   reduce using rule 43 (ClsHeader)
    OPEN_BRACE  reduce using rule 43 (ClsHeader)
    $default    reduce using rule 143 (VarType)


State 5

    2 Start: Program G_ERROR .

    $default  reduce using rule 2 (Start)


State 6

   19 Program: Program G_EOL .

    $default  reduce using rule 19 (Program)


State 7

   20 Program: Program G_END .

    $default  reduce using rule 20 (Program)


State 8

  161 FileHeader: FILE_TAG . G_LINE

    G_LINE  shift, and go to state 63


State 9

   34 ClasseEmpty: CLASS_TAG . G_WORD G_END
   37 ClsHeader: CLASS_TAG . G_WORD

    G_WORD  shift, and go to state 64


State 10

   25 PrefixedGlobalBlock: PUBLIK_TAG . VarsCore
   29 PrefixedFunctionBlock: PUBLIK_TAG . MethodCore
   42 ClsHeader: PUBLIK_TAG . G_WORD

    G_WORD        shift, and go to state 65
    ENUM_TAG      shift, and go to state 14
    TYPEDEF_TAG   shift, and go to state 20
    STRUCT_TAG    shift, and go to state 21
    UNION_TAG     shift, and go to state 22
    G_PTR         shift, and go to state 23
    COMPLEX_TYPE  shift, and go to state 24
    CONST_TYPE    shift, and go to state 25

    VarsCore      go to state 66
    MethodCore    go to state 67
    MethodProto   go to state 36
    MethodHeader  go to state 37
    MethodName    go to state 38
    TypedefBlock  go to state 68
    StructBlock   go to state 69
    StructCore    go to state 43
    UnionBlock    go to state 70
    UnionCore     go to state 46
    EnumBlock     go to state 71
    EnumHeader    go to state 51
    VarType       go to state 72
    GPtrs         go to state 60
    ComplexType   go to state 61


State 11

   24 PrefixedGlobalBlock: STATIC_TAG . VarsCore
   31 PrefixedFunctionBlock: STATIC_TAG . MethodCore

    G_WORD        shift, and go to state 73
    ENUM_TAG      shift, and go to state 14
    TYPEDEF_TAG   shift, and go to state 20
    STRUCT_TAG    shift, and go to state 21
    UNION_TAG     shift, and go to state 22
    G_PTR         shift, and go to state 23
    COMPLEX_TYPE  shift, and go to state 24
    CONST_TYPE    shift, and go to state 25

    VarsCore      go to state 74
    MethodCore    go to state 75
    MethodProto   go to state 36
    MethodHeader  go to state 37
    MethodName    go to state 38
    TypedefBlock  go to state 68
    StructBlock   go to state 69
    StructCore    go to state 43
    UnionBlock    go to state 70
    UnionCore     go to state 46
    EnumBlock     go to state 71
    EnumHeader    go to state 51
    VarType       go to state 72
    GPtrs         go to state 60
    ComplexType   go to state 61


State 12

   23 PrefixedGlobalBlock: EXPOR_TAG . VarsCore

    G_WORD        shift, and go to state 76
    ENUM_TAG      shift, and go to state 14
    TYPEDEF_TAG   shift, and go to state 20
    STRUCT_TAG    shift, and go to state 21
    UNION_TAG     shift, and go to state 22
    COMPLEX_TYPE  shift, and go to state 77
    CONST_TYPE    shift, and go to state 25

    VarsCore      go to state 78
    TypedefBlock  go to state 68
    StructBlock   go to state 69
    StructCore    go to state 43
    UnionBlock    go to state 70
    UnionCore     go to state 46
    EnumBlock     go to state 71
    EnumHeader    go to state 51
    VarType       go to state 79


State 13

  159 AssertHeader: IMPLEMENT_TAG . OPEN_PRM G_WORD CLOSE_PRM
  160             | IMPLEMENT_TAG . G_LINE

    G_LINE    shift, and go to state 80
    OPEN_PRM  shift, and go to state 81


State 14

  130 EnumHeader: ENUM_TAG .
  131           | ENUM_TAG . G_WORD
  146 VarType: ENUM_TAG . G_WORD

    G_WORD  shift, and go to state 82

    $default  reduce using rule 130 (EnumHeader)


State 15

  140 Doc: DOC_BLOCK .

    $default  reduce using rule 140 (Doc)


State 16

  121 DefineBlock: DEFINE_TAG . G_WORD G_EOL
  122            | DEFINE_TAG . G_WORD G_SEPARATOR
  123            | DEFINE_TAG . G_WORD TYPEDEF_TAG
  124            | DEFINE_TAG . G_WORD G_WORD
  125            | DEFINE_TAG . G_WORD COMPLEX_TYPE
  126            | DEFINE_TAG . G_WORD OPEN_PRM

    G_WORD  shift, and go to state 83


State 17

  162 CppFileLine: LINE_TAG . G_WORD

    G_WORD  shift, and go to state 84


State 18

  166 IgnoreBlock: IGNORE_TAG .

    $default  reduce using rule 166 (IgnoreBlock)


State 19

  163 Warning: WARNING_TAG . G_LINE

    G_LINE  shift, and go to state 85


State 20

   87 TypedefBlock: TYPEDEF_TAG . COMPLEX_TYPE G_WORD G_WORD
   88             | TYPEDEF_TAG . COMPLEX_TYPE G_WORD GPtrs G_WORD
   89             | TYPEDEF_TAG . G_WORD G_WORD
   90             | TYPEDEF_TAG . G_WORD GPtrs G_WORD
   91             | TYPEDEF_TAG . EnumBlock G_WORD
   92             | TYPEDEF_TAG . EnumHeader G_WORD
   93             | TYPEDEF_TAG . UnionBlock G_WORD
   94             | TYPEDEF_TAG . StructBlock G_WORD
   95             | TYPEDEF_TAG . STRUCT_TAG G_WORD G_WORD
   96             | TYPEDEF_TAG . STRUCT_TAG G_WORD GPtrs G_WORD
   97             | TYPEDEF_TAG . G_WORD OPEN_PRM

    G_WORD        shift, and go to state 86
    ENUM_TAG      shift, and go to state 87
    STRUCT_TAG    shift, and go to state 88
    UNION_TAG     shift, and go to state 89
    COMPLEX_TYPE  shift, and go to state 90

    StructBlock  go to state 91
    StructCore   go to state 43
    UnionBlock   go to state 92
    UnionCore    go to state 46
    EnumBlock    go to state 93
    EnumHeader   go to state 94


State 21

  101 StructCore: STRUCT_TAG . OPEN_BRACE
  102           | STRUCT_TAG . G_WORD OPEN_BRACE
  147 VarType: STRUCT_TAG . G_WORD

    G_WORD      shift, and go to state 95
    OPEN_BRACE  shift, and go to state 96


State 22

  107 UnionCore: UNION_TAG . OPEN_BRACE
  108          | UNION_TAG . G_WORD OPEN_BRACE
  148 VarType: UNION_TAG . G_WORD

    G_WORD      shift, and go to state 97
    OPEN_BRACE  shift, and go to state 98


State 23

  169 GPtrs: G_PTR .

    $default  reduce using rule 169 (GPtrs)


State 24

  144 VarType: COMPLEX_TYPE . G_WORD
  172 ComplexType: COMPLEX_TYPE .

    G_WORD  shift, and go to state 99

    G_WORD  [reduce using rule 172 (ComplexType)]


State 25

  145 VarType: CONST_TYPE . G_WORD

    G_WORD  shift, and go to state 100


State 26

   15 Program: Program Global .

    $default  reduce using rule 15 (Program)


State 27

   22 Global: PrefixedGlobalBlock .

    $default  reduce using rule 22 (Global)


State 28

   14 Program: Program Function .

    $default  reduce using rule 14 (Program)


State 29

   28 Function: PrefixedFunctionBlock .

    $default  reduce using rule 28 (Function)


State 30

   12 Program: Program Classe .

    $default  reduce using rule 12 (Program)


State 31

    6 Program: Program ClasseEmpty .

    $default  reduce using rule 6 (Program)


State 32

   33 Classe: ClasseBlock .

    $default  reduce using rule 33 (Classe)


State 33

   35 ClasseBlock: ClsHeader . ClsExtends ClsCore G_END
   36            | ClsHeader . ClsCore G_END

    SUPER_TAG   shift, and go to state 101
    OPEN_BRACE  shift, and go to state 102

    ClsExtends  go to state 103
    ClsCore     go to state 104


State 34

   26 PrefixedGlobalBlock: VarsCore .

    $default  reduce using rule 26 (PrefixedGlobalBlock)


State 35

   30 PrefixedFunctionBlock: MethodCore .

    $default  reduce using rule 30 (PrefixedFunctionBlock)


State 36

   77 MethodCore: MethodProto . END_CODE
   78           | MethodProto . G_END

    G_END     shift, and go to state 105
    END_CODE  shift, and go to state 106


State 37

   79 MethodProto: MethodHeader . Params CLOSE_PRM
   80            | MethodHeader . CLOSE_PRM

    G_WORD        shift, and go to state 76
    CLOSE_PRM     shift, and go to state 107
    ENUM_TAG      shift, and go to state 14
    TYPEDEF_TAG   shift, and go to state 20
    STRUCT_TAG    shift, and go to state 21
    UNION_TAG     shift, and go to state 22
    COMPLEX_TYPE  shift, and go to state 77
    CONST_TYPE    shift, and go to state 25

    TypedefBlock  go to state 68
    StructBlock   go to state 69
    StructCore    go to state 43
    UnionBlock    go to state 70
    UnionCore     go to state 46
    EnumBlock     go to state 71
    EnumHeader    go to state 51
    Params        go to state 108
    VarType       go to state 109
    Param         go to state 110


State 38

   82 MethodHeader: MethodName .

    $default  reduce using rule 82 (MethodHeader)


State 39

   16 Program: Program Typedef .

    $default  reduce using rule 16 (Program)


State 40

   86 Typedef: TypedefBlock . G_END
  149 VarType: TypedefBlock .

    G_END  shift, and go to state 111

    $default  reduce using rule 149 (VarType)


State 41

   17 Program: Program Struct .

    $default  reduce using rule 17 (Program)


State 42

   99 Struct: StructBlock . G_END
  150 VarType: StructBlock .

    G_END  shift, and go to state 112

    $default  reduce using rule 150 (VarType)


State 43

  100 StructBlock: StructCore . CLOSE_BRACE
  103 StructCore: StructCore . Element

    G_WORD        shift, and go to state 76
    ENUM_TAG      shift, and go to state 14
    DOC_BLOCK     shift, and go to state 15
    CLOSE_BRACE   shift, and go to state 113
    TYPEDEF_TAG   shift, and go to state 20
    STRUCT_TAG    shift, and go to state 21
    UNION_TAG     shift, and go to state 22
    COMPLEX_TYPE  shift, and go to state 77
    CONST_TYPE    shift, and go to state 25

    TypedefBlock  go to state 68
    StructBlock   go to state 69
    StructCore    go to state 43
    UnionBlock    go to state 70
    UnionCore     go to state 46
    Element       go to state 114
    ElementBlock  go to state 115
    EnumBlock     go to state 71
    EnumHeader    go to state 51
    Doc           go to state 116
    VarType       go to state 117


State 44

   18 Program: Program Union .

    $default  reduce using rule 18 (Program)


State 45

  105 Union: UnionBlock . G_END
  152 VarType: UnionBlock .

    G_END  shift, and go to state 118

    $default  reduce using rule 152 (VarType)


State 46

  106 UnionBlock: UnionCore . CLOSE_BRACE
  109 UnionCore: UnionCore . Element

    G_WORD        shift, and go to state 76
    ENUM_TAG      shift, and go to state 14
    DOC_BLOCK     shift, and go to state 15
    CLOSE_BRACE   shift, and go to state 119
    TYPEDEF_TAG   shift, and go to state 20
    STRUCT_TAG    shift, and go to state 21
    UNION_TAG     shift, and go to state 22
    COMPLEX_TYPE  shift, and go to state 77
    CONST_TYPE    shift, and go to state 25

    TypedefBlock  go to state 68
    StructBlock   go to state 69
    StructCore    go to state 43
    UnionBlock    go to state 70
    UnionCore     go to state 46
    Element       go to state 120
    ElementBlock  go to state 115
    EnumBlock     go to state 71
    EnumHeader    go to state 51
    Doc           go to state 116
    VarType       go to state 117


State 47

    4 Program: Program Define .

    $default  reduce using rule 4 (Program)


State 48

  119 Define: DefineBlock .

    $default  reduce using rule 119 (Define)


State 49

   13 Program: Program Enum .

    $default  reduce using rule 13 (Program)


State 50

  128 Enum: EnumBlock . G_END
  151 VarType: EnumBlock .

    G_END  shift, and go to state 121

    $default  reduce using rule 151 (VarType)


State 51

  129 EnumBlock: EnumHeader . OPEN_BRACE Values CLOSE_BRACE

    OPEN_BRACE  shift, and go to state 122


State 52

   11 Program: Program Doc .
   21 Global: Doc . PrefixedGlobalBlock
   27 Function: Doc . PrefixedFunctionBlock
   32 Classe: Doc . ClasseBlock
   85 Typedef: Doc . TypedefBlock G_END
   98 Struct: Doc . StructBlock G_END
  104 Union: Doc . UnionBlock G_END
  120 Define: Doc . DefineBlock
  127 Enum: Doc . EnumBlock G_END

    G_WORD        shift, and go to state 4
    CLASS_TAG     shift, and go to state 123
    PUBLIK_TAG    shift, and go to state 10
    STATIC_TAG    shift, and go to state 11
    EXPOR_TAG     shift, and go to state 12
    ENUM_TAG      shift, and go to state 14
    DEFINE_TAG    shift, and go to state 16
    TYPEDEF_TAG   shift, and go to state 20
    STRUCT_TAG    shift, and go to state 21
    UNION_TAG     shift, and go to state 22
    G_PTR         shift, and go to state 23
    COMPLEX_TYPE  shift, and go to state 24
    CONST_TYPE    shift, and go to state 25

    G_WORD        [reduce using rule 11 (Program)]
    CLASS_TAG     [reduce using rule 11 (Program)]
    PUBLIK_TAG    [reduce using rule 11 (Program)]
    STATIC_TAG    [reduce using rule 11 (Program)]
    EXPOR_TAG     [reduce using rule 11 (Program)]
    ENUM_TAG      [reduce using rule 11 (Program)]
    DEFINE_TAG    [reduce using rule 11 (Program)]
    TYPEDEF_TAG   [reduce using rule 11 (Program)]
    STRUCT_TAG    [reduce using rule 11 (Program)]
    UNION_TAG     [reduce using rule 11 (Program)]
    G_PTR         [reduce using rule 11 (Program)]
    COMPLEX_TYPE  [reduce using rule 11 (Program)]
    CONST_TYPE    [reduce using rule 11 (Program)]
    $default      reduce using rule 11 (Program)

    PrefixedGlobalBlock    go to state 124
    PrefixedFunctionBlock  go to state 125
    ClasseBlock            go to state 126
    ClsHeader              go to state 33
    VarsCore               go to state 34
    MethodCore             go to state 35
    MethodProto            go to state 36
    MethodHeader           go to state 37
    MethodName             go to state 38
    TypedefBlock           go to state 127
    StructBlock            go to state 128
    StructCore             go to state 43
    UnionBlock             go to state 129
    UnionCore              go to state 46
    DefineBlock            go to state 130
    EnumBlock              go to state 131
    EnumHeader             go to state 51
    VarType                go to state 72
    GPtrs                  go to state 60
    ComplexType            go to state 61


State 53

   63 VarsCore: VarType . VarsList G_END
   64         | VarType . VarsList END_CODE
   81 MethodHeader: VarType . MethodName
  165 Ignore: VarType . IgnoreBlock

    G_WORD        shift, and go to state 132
    IGNORE_TAG    shift, and go to state 18
    G_PTR         shift, and go to state 23
    COMPLEX_TYPE  shift, and go to state 133

    VarsList        go to state 134
    VarInstance     go to state 135
    VarDeclaration  go to state 136
    MethodName      go to state 137
    IgnoreBlock     go to state 138
    GPtrs           go to state 60
    ComplexType     go to state 139


State 54

   10 Program: Program AssertHeader .

    $default  reduce using rule 10 (Program)


State 55

    9 Program: Program FileHeader .

    $default  reduce using rule 9 (Program)


State 56

    5 Program: Program CppFileLine .

    $default  reduce using rule 5 (Program)


State 57

    8 Program: Program Warning .

    $default  reduce using rule 8 (Program)


State 58

    7 Program: Program Ignore .

    $default  reduce using rule 7 (Program)


State 59

  164 Ignore: IgnoreBlock .

    $default  reduce using rule 164 (Ignore)


State 60

  170 GPtrs: GPtrs . G_PTR
  171 ComplexType: GPtrs .
  173            | GPtrs . COMPLEX_TYPE

    G_PTR         shift, and go to state 140
    COMPLEX_TYPE  shift, and go to state 141

    $default  reduce using rule 171 (ComplexType)


State 61

   84 MethodName: ComplexType . G_WORD OPEN_PRM

    G_WORD  shift, and go to state 142


State 62

   83 MethodName: G_WORD OPEN_PRM .

    $default  reduce using rule 83 (MethodName)


State 63

  161 FileHeader: FILE_TAG G_LINE .

    $default  reduce using rule 161 (FileHeader)


State 64
